attached_assets/Pasted-SyntaxError-home-runner-workspace-src-App-js-Identifier-isAboutOpen-has-already-been-declared--1741165928385.txt
SyntaxError: /home/runner/workspace/src/App.js: Identifier 'isAboutOpen' has already been declared. (493:9)
  491 |   );
  492 |
> 493 |   const [isAboutOpen, setIsAboutOpen] = useState(isAboutOpen); //Added state for about modal
      |          ^
  494 |
  495 |   // Render logic
  496 |   const renderGameHeader = () => (
    at parser.next (<anonymous>)
    at normalizeFile.next (<anonymous>)
    at run.next (<anonymous>)
    at transform.next (<anonymous>)
ERROR in ./src/App.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/src/App.js: Identifier 'isAboutOpen' has already been declared. (493:9)

  491 |   );
  492 |
> 493 |   const [isAboutOpen, setIsAboutOpen] = useState(isAboutOpen); //Added state for about modal
      |          ^
  494 |
  495 |   // Render logic
  496 |   const renderGameHeader = () => (
    at constructor (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:360:19)
    at FlowParserMixin.raise (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:3327:19)
    at FlowScopeHandler.checkRedeclarationInScope (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:1555:19)
    at FlowScopeHandler.declareName (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:1521:12)
    at FlowScopeHandler.declareName (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:1622:11)
    at FlowParserMixin.declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:7476:16)
    at FlowParserMixin.checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:7472:12)
    at FlowParserMixin.checkLVal (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:7413:12)
    at FlowParserMixin.checkLVal (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:7449:16)
    at FlowParserMixin.parseVarId (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13052:10)
    at FlowParserMixin.parseVarId (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:5698:11)
    at FlowParserMixin.parseVar (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13027:12)
    at FlowParserMixin.parseVarStatement (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12874:10)
    at FlowParserMixin.parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12489:23)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12406:17)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:5140:24)
    at FlowParserMixin.parseStatementListItem (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12386:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12960:61)
    at FlowParserMixin.parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12953:10)
    at FlowParserMixin.parseBlock (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12941:10)
    at FlowParserMixin.parseFunctionBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:11783:24)
    at FlowParserMixin.parseFunctionBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:5117:11)
    at FlowParserMixin.parseFunctionBodyAndFinish (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:11769:10)
    at FlowParserMixin.parseFunctionBodyAndFinish (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:5125:18)
    at /home/runner/workspace/node_modules/@babel/parser/lib/index.js:13085:12
    at FlowParserMixin.withSmartMixTopicForbiddingContext (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12077:14)
    at FlowParserMixin.parseFunction (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:13084:10)
    at FlowParserMixin.parseFunctionStatement (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12769:17)
    at FlowParserMixin.parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12430:21)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12406:17)
    at FlowParserMixin.parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:5140:24)
    at FlowParserMixin.parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12383:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12960:36)
    at FlowParserMixin.parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12953:10)
    at FlowParserMixin.parseProgram (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12280:10)
    at FlowParserMixin.parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:12270:25)
    at FlowParserMixin.parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:5909:28)
    at FlowParserMixin.parse (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:14120:10)
    at parse (/home/runner/workspace/node_modules/@babel/parser/lib/index.js:14154:38)
    at parser (/home/runner/workspace/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/runner/workspace/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/runner/workspace/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/runner/workspace/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/runner/workspace/node_modules/gensync/index.js:261:32)
    at /home/runner/workspace/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/runner/workspace/node_modules/gensync/index.js:223:11)

ERROR in [eslint] 
src/App.js
  Line 493:9:  Parsing error: Identifier 'isAboutOpen' has already been declared. (493:9)

webpack compiled with 2 errors